# pristine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  STYLE_GUIDE.md  client.py  default.toml  forking.toml  justfile  ratchet-counts.toml  spec-files
.beads/: issues.jsonl  last-touched
.claude/agents/: coding.md  coordinator.md  judge.md  tidy.md
blueprint/agent-forking/: plan-agent-forking.md
blueprint/builtin-tools/: PLAN.md  PROMPT.md
blueprint/configuration-file/: PROMPT.md  plan-configuration-file.md
blueprint/jsonrpc-stdio-server/: PLAN.md  PROMPT.md
blueprint/pristine-phase1-architecture/: plan.md  prompt.md
blueprint/skills/: blueprint-state.md  plan-skills.md
docs/: comparative-engine-analysis.html  forking-requirements.md  multiverse-requirements.md  skills-requirements.md
src/: agent.rs  builtins.rs  config.rs  harness.rs  history.rs  lib.rs  messagebus.rs  model.rs  provider.rs  rpc.rs  shell.rs  skills.rs  stdio.rs  test_support.rs  tool.rs  user.rs
src/builtins/: activate_skill.rs  add.rs  edit.rs  exec_bash.rs  exit.rs  fork.rs  insert.rs  path.rs  read.rs  write.rs
src/config/: auth.rs  autowrite.rs  discover.rs  error.rs  parse.rs  resolve.rs  template.rs  tests.rs  topology.rs  validate.rs
src/model/: anthropic.rs  deepseek.rs  openai_dialect.rs  openrouter.rs
src/skills/: discover.rs  filesystem.rs  parse.rs  registry.rs  source.rs  types.rs
tests/: anthropic_live.rs  builtin_tools_live.rs  config_assembly.rs  exec_bash_smoke.rs  forking_live.rs  stdio_integration.rs
