[package]
name = "pristine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pristine"
path = "src/bin/pristine.rs"

[[bin]]
name = "1p"
path = "src/bin/1p.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
eventsource-stream = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
